syntax = "proto3";
package airbloc.rpc.v1;

option go_package = "github.com/airbloc/airbloc-go/proto/rpc/v1/server";

service Accounts {
    // Exists return true if account exists with given identity information (e.g. Email).
    rpc Exists(AccountExistsRequest) returns (AccountExistsResponse);
}

message AccountExistsRequest {
    string identity = 1;
}

message AccountExistsResponse {
    bool exists = 1;
}
